CIRLCE 1K REPEAT DO NOT MERGE

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -110,10 +110,10 @@ jobs:
     - CCM_MAX_HEAP_SIZE: 1024M
     - CCM_HEAP_NEWSIZE: 256M
     - REPEATED_UTEST_TARGET: testsome
-    - REPEATED_UTEST_CLASS: null
+    - REPEATED_UTEST_CLASS: org.apache.cassandra.db.commitlog.GroupCommitLogTest
     - REPEATED_UTEST_METHODS: null
     - REPEATED_UTEST_VNODES: false
-    - REPEATED_UTEST_COUNT: 100
+    - REPEATED_UTEST_COUNT: 1000
     - REPEATED_UTEST_STOP_ON_FAILURE: false
     - REPEATED_DTEST_NAME: null
     - REPEATED_DTEST_VNODES: false
@@ -292,10 +292,10 @@ jobs:
     - CCM_MAX_HEAP_SIZE: 1024M
     - CCM_HEAP_NEWSIZE: 256M
     - REPEATED_UTEST_TARGET: testsome
-    - REPEATED_UTEST_CLASS: null
+    - REPEATED_UTEST_CLASS: org.apache.cassandra.db.commitlog.GroupCommitLogTest
     - REPEATED_UTEST_METHODS: null
     - REPEATED_UTEST_VNODES: false
-    - REPEATED_UTEST_COUNT: 100
+    - REPEATED_UTEST_COUNT: 1000
     - REPEATED_UTEST_STOP_ON_FAILURE: false
     - REPEATED_DTEST_NAME: null
     - REPEATED_DTEST_VNODES: false
@@ -402,10 +402,10 @@ jobs:
     - CCM_MAX_HEAP_SIZE: 1024M
     - CCM_HEAP_NEWSIZE: 256M
     - REPEATED_UTEST_TARGET: testsome
-    - REPEATED_UTEST_CLASS: null
+    - REPEATED_UTEST_CLASS: org.apache.cassandra.db.commitlog.GroupCommitLogTest
     - REPEATED_UTEST_METHODS: null
     - REPEATED_UTEST_VNODES: false
-    - REPEATED_UTEST_COUNT: 100
+    - REPEATED_UTEST_COUNT: 1000
     - REPEATED_UTEST_STOP_ON_FAILURE: false
     - REPEATED_DTEST_NAME: null
     - REPEATED_DTEST_VNODES: false
@@ -512,10 +512,10 @@ jobs:
     - CCM_MAX_HEAP_SIZE: 1024M
     - CCM_HEAP_NEWSIZE: 256M
     - REPEATED_UTEST_TARGET: testsome
-    - REPEATED_UTEST_CLASS: null
+    - REPEATED_UTEST_CLASS: org.apache.cassandra.db.commitlog.GroupCommitLogTest
     - REPEATED_UTEST_METHODS: null
     - REPEATED_UTEST_VNODES: false
-    - REPEATED_UTEST_COUNT: 100
+    - REPEATED_UTEST_COUNT: 1000
     - REPEATED_UTEST_STOP_ON_FAILURE: false
     - REPEATED_DTEST_NAME: null
     - REPEATED_DTEST_VNODES: false
@@ -636,10 +636,10 @@ jobs:
     - CCM_MAX_HEAP_SIZE: 1024M
     - CCM_HEAP_NEWSIZE: 256M
     - REPEATED_UTEST_TARGET: testsome
-    - REPEATED_UTEST_CLASS: null
+    - REPEATED_UTEST_CLASS: org.apache.cassandra.db.commitlog.GroupCommitLogTest
     - REPEATED_UTEST_METHODS: null
     - REPEATED_UTEST_VNODES: false
-    - REPEATED_UTEST_COUNT: 100
+    - REPEATED_UTEST_COUNT: 1000
     - REPEATED_UTEST_STOP_ON_FAILURE: false
     - REPEATED_DTEST_NAME: null
     - REPEATED_DTEST_VNODES: false
@@ -732,10 +732,10 @@ jobs:
     - CCM_MAX_HEAP_SIZE: 1024M
     - CCM_HEAP_NEWSIZE: 256M
     - REPEATED_UTEST_TARGET: testsome
-    - REPEATED_UTEST_CLASS: null
+    - REPEATED_UTEST_CLASS: org.apache.cassandra.db.commitlog.GroupCommitLogTest
     - REPEATED_UTEST_METHODS: null
     - REPEATED_UTEST_VNODES: false
-    - REPEATED_UTEST_COUNT: 100
+    - REPEATED_UTEST_COUNT: 1000
     - REPEATED_UTEST_STOP_ON_FAILURE: false
     - REPEATED_DTEST_NAME: null
     - REPEATED_DTEST_VNODES: false
@@ -828,10 +828,10 @@ jobs:
     - CCM_MAX_HEAP_SIZE: 1024M
     - CCM_HEAP_NEWSIZE: 256M
     - REPEATED_UTEST_TARGET: testsome
-    - REPEATED_UTEST_CLASS: null
+    - REPEATED_UTEST_CLASS: org.apache.cassandra.db.commitlog.GroupCommitLogTest
     - REPEATED_UTEST_METHODS: null
     - REPEATED_UTEST_VNODES: false
-    - REPEATED_UTEST_COUNT: 100
+    - REPEATED_UTEST_COUNT: 1000
     - REPEATED_UTEST_STOP_ON_FAILURE: false
     - REPEATED_DTEST_NAME: null
     - REPEATED_DTEST_VNODES: false
@@ -925,10 +925,10 @@ jobs:
     - CCM_MAX_HEAP_SIZE: 1024M
     - CCM_HEAP_NEWSIZE: 256M
     - REPEATED_UTEST_TARGET: testsome
-    - REPEATED_UTEST_CLASS: null
+    - REPEATED_UTEST_CLASS: org.apache.cassandra.db.commitlog.GroupCommitLogTest
     - REPEATED_UTEST_METHODS: null
     - REPEATED_UTEST_VNODES: false
-    - REPEATED_UTEST_COUNT: 100
+    - REPEATED_UTEST_COUNT: 1000
     - REPEATED_UTEST_STOP_ON_FAILURE: false
     - REPEATED_DTEST_NAME: null
     - REPEATED_DTEST_VNODES: false
@@ -1022,10 +1022,10 @@ jobs:
     - CCM_MAX_HEAP_SIZE: 1024M
     - CCM_HEAP_NEWSIZE: 256M
     - REPEATED_UTEST_TARGET: testsome
-    - REPEATED_UTEST_CLASS: null
+    - REPEATED_UTEST_CLASS: org.apache.cassandra.db.commitlog.GroupCommitLogTest
     - REPEATED_UTEST_METHODS: null
     - REPEATED_UTEST_VNODES: false
-    - REPEATED_UTEST_COUNT: 100
+    - REPEATED_UTEST_COUNT: 1000
     - REPEATED_UTEST_STOP_ON_FAILURE: false
     - REPEATED_DTEST_NAME: null
     - REPEATED_DTEST_VNODES: false
@@ -1133,10 +1133,10 @@ jobs:
     - CCM_MAX_HEAP_SIZE: 1024M
     - CCM_HEAP_NEWSIZE: 256M
     - REPEATED_UTEST_TARGET: testsome
-    - REPEATED_UTEST_CLASS: null
+    - REPEATED_UTEST_CLASS: org.apache.cassandra.db.commitlog.GroupCommitLogTest
     - REPEATED_UTEST_METHODS: null
     - REPEATED_UTEST_VNODES: false
-    - REPEATED_UTEST_COUNT: 100
+    - REPEATED_UTEST_COUNT: 1000
     - REPEATED_UTEST_STOP_ON_FAILURE: false
     - REPEATED_DTEST_NAME: null
     - REPEATED_DTEST_VNODES: false
@@ -1240,10 +1240,10 @@ jobs:
     - CCM_MAX_HEAP_SIZE: 1024M
     - CCM_HEAP_NEWSIZE: 256M
     - REPEATED_UTEST_TARGET: testsome
-    - REPEATED_UTEST_CLASS: null
+    - REPEATED_UTEST_CLASS: org.apache.cassandra.db.commitlog.GroupCommitLogTest
     - REPEATED_UTEST_METHODS: null
     - REPEATED_UTEST_VNODES: false
-    - REPEATED_UTEST_COUNT: 100
+    - REPEATED_UTEST_COUNT: 1000
     - REPEATED_UTEST_STOP_ON_FAILURE: false
     - REPEATED_DTEST_NAME: null
     - REPEATED_DTEST_VNODES: false
@@ -1336,10 +1336,10 @@ jobs:
     - CCM_MAX_HEAP_SIZE: 1024M
     - CCM_HEAP_NEWSIZE: 256M
     - REPEATED_UTEST_TARGET: testsome
-    - REPEATED_UTEST_CLASS: null
+    - REPEATED_UTEST_CLASS: org.apache.cassandra.db.commitlog.GroupCommitLogTest
     - REPEATED_UTEST_METHODS: null
     - REPEATED_UTEST_VNODES: false
-    - REPEATED_UTEST_COUNT: 100
+    - REPEATED_UTEST_COUNT: 1000
     - REPEATED_UTEST_STOP_ON_FAILURE: false
     - REPEATED_DTEST_NAME: null
     - REPEATED_DTEST_VNODES: false
@@ -1481,10 +1481,10 @@ jobs:
     - CCM_MAX_HEAP_SIZE: 1024M
     - CCM_HEAP_NEWSIZE: 256M
     - REPEATED_UTEST_TARGET: testsome
-    - REPEATED_UTEST_CLASS: null
+    - REPEATED_UTEST_CLASS: org.apache.cassandra.db.commitlog.GroupCommitLogTest
     - REPEATED_UTEST_METHODS: null
     - REPEATED_UTEST_VNODES: false
-    - REPEATED_UTEST_COUNT: 100
+    - REPEATED_UTEST_COUNT: 1000
     - REPEATED_UTEST_STOP_ON_FAILURE: false
     - REPEATED_DTEST_NAME: null
     - REPEATED_DTEST_VNODES: false
@@ -1605,10 +1605,10 @@ jobs:
     - CCM_MAX_HEAP_SIZE: 1024M
     - CCM_HEAP_NEWSIZE: 256M
     - REPEATED_UTEST_TARGET: testsome
-    - REPEATED_UTEST_CLASS: null
+    - REPEATED_UTEST_CLASS: org.apache.cassandra.db.commitlog.GroupCommitLogTest
     - REPEATED_UTEST_METHODS: null
     - REPEATED_UTEST_VNODES: false
-    - REPEATED_UTEST_COUNT: 100
+    - REPEATED_UTEST_COUNT: 1000
     - REPEATED_UTEST_STOP_ON_FAILURE: false
     - REPEATED_DTEST_NAME: null
     - REPEATED_DTEST_VNODES: false
@@ -1704,10 +1704,10 @@ jobs:
     - CCM_MAX_HEAP_SIZE: 1024M
     - CCM_HEAP_NEWSIZE: 256M
     - REPEATED_UTEST_TARGET: testsome
-    - REPEATED_UTEST_CLASS: null
+    - REPEATED_UTEST_CLASS: org.apache.cassandra.db.commitlog.GroupCommitLogTest
     - REPEATED_UTEST_METHODS: null
     - REPEATED_UTEST_VNODES: false
-    - REPEATED_UTEST_COUNT: 100
+    - REPEATED_UTEST_COUNT: 1000
     - REPEATED_UTEST_STOP_ON_FAILURE: false
     - REPEATED_DTEST_NAME: null
     - REPEATED_DTEST_VNODES: false
@@ -1782,10 +1782,10 @@ jobs:
     - CCM_MAX_HEAP_SIZE: 1024M
     - CCM_HEAP_NEWSIZE: 256M
     - REPEATED_UTEST_TARGET: testsome
-    - REPEATED_UTEST_CLASS: null
+    - REPEATED_UTEST_CLASS: org.apache.cassandra.db.commitlog.GroupCommitLogTest
     - REPEATED_UTEST_METHODS: null
     - REPEATED_UTEST_VNODES: false
-    - REPEATED_UTEST_COUNT: 100
+    - REPEATED_UTEST_COUNT: 1000
     - REPEATED_UTEST_STOP_ON_FAILURE: false
     - REPEATED_DTEST_NAME: null
     - REPEATED_DTEST_VNODES: false
@@ -1859,10 +1859,10 @@ jobs:
     - CCM_MAX_HEAP_SIZE: 1024M
     - CCM_HEAP_NEWSIZE: 256M
     - REPEATED_UTEST_TARGET: testsome
-    - REPEATED_UTEST_CLASS: null
+    - REPEATED_UTEST_CLASS: org.apache.cassandra.db.commitlog.GroupCommitLogTest
     - REPEATED_UTEST_METHODS: null
     - REPEATED_UTEST_VNODES: false
-    - REPEATED_UTEST_COUNT: 100
+    - REPEATED_UTEST_COUNT: 1000
     - REPEATED_UTEST_STOP_ON_FAILURE: false
     - REPEATED_DTEST_NAME: null
     - REPEATED_DTEST_VNODES: false
@@ -1923,10 +1923,10 @@ jobs:
     - CCM_MAX_HEAP_SIZE: 1024M
     - CCM_HEAP_NEWSIZE: 256M
     - REPEATED_UTEST_TARGET: testsome
-    - REPEATED_UTEST_CLASS: null
+    - REPEATED_UTEST_CLASS: org.apache.cassandra.db.commitlog.GroupCommitLogTest
     - REPEATED_UTEST_METHODS: null
     - REPEATED_UTEST_VNODES: false
-    - REPEATED_UTEST_COUNT: 100
+    - REPEATED_UTEST_COUNT: 1000
     - REPEATED_UTEST_STOP_ON_FAILURE: false
     - REPEATED_DTEST_NAME: null
     - REPEATED_DTEST_VNODES: false
@@ -2033,10 +2033,10 @@ jobs:
     - CCM_MAX_HEAP_SIZE: 1024M
     - CCM_HEAP_NEWSIZE: 256M
     - REPEATED_UTEST_TARGET: testsome
-    - REPEATED_UTEST_CLASS: null
+    - REPEATED_UTEST_CLASS: org.apache.cassandra.db.commitlog.GroupCommitLogTest
     - REPEATED_UTEST_METHODS: null
     - REPEATED_UTEST_VNODES: false
-    - REPEATED_UTEST_COUNT: 100
+    - REPEATED_UTEST_COUNT: 1000
     - REPEATED_UTEST_STOP_ON_FAILURE: false
     - REPEATED_DTEST_NAME: null
     - REPEATED_DTEST_VNODES: false
@@ -2143,10 +2143,10 @@ jobs:
     - CCM_MAX_HEAP_SIZE: 1024M
     - CCM_HEAP_NEWSIZE: 256M
     - REPEATED_UTEST_TARGET: testsome
-    - REPEATED_UTEST_CLASS: null
+    - REPEATED_UTEST_CLASS: org.apache.cassandra.db.commitlog.GroupCommitLogTest
     - REPEATED_UTEST_METHODS: null
     - REPEATED_UTEST_VNODES: false
-    - REPEATED_UTEST_COUNT: 100
+    - REPEATED_UTEST_COUNT: 1000
     - REPEATED_UTEST_STOP_ON_FAILURE: false
     - REPEATED_DTEST_NAME: null
     - REPEATED_DTEST_VNODES: false
@@ -2243,10 +2243,10 @@ jobs:
     - CCM_MAX_HEAP_SIZE: 1024M
     - CCM_HEAP_NEWSIZE: 256M
     - REPEATED_UTEST_TARGET: testsome
-    - REPEATED_UTEST_CLASS: null
+    - REPEATED_UTEST_CLASS: org.apache.cassandra.db.commitlog.GroupCommitLogTest
     - REPEATED_UTEST_METHODS: null
     - REPEATED_UTEST_VNODES: false
-    - REPEATED_UTEST_COUNT: 100
+    - REPEATED_UTEST_COUNT: 1000
     - REPEATED_UTEST_STOP_ON_FAILURE: false
     - REPEATED_DTEST_NAME: null
     - REPEATED_DTEST_VNODES: false
@@ -2299,10 +2299,10 @@ jobs:
     - CCM_MAX_HEAP_SIZE: 1024M
     - CCM_HEAP_NEWSIZE: 256M
     - REPEATED_UTEST_TARGET: testsome
-    - REPEATED_UTEST_CLASS: null
+    - REPEATED_UTEST_CLASS: org.apache.cassandra.db.commitlog.GroupCommitLogTest
     - REPEATED_UTEST_METHODS: null
     - REPEATED_UTEST_VNODES: false
-    - REPEATED_UTEST_COUNT: 100
+    - REPEATED_UTEST_COUNT: 1000
     - REPEATED_UTEST_STOP_ON_FAILURE: false
     - REPEATED_DTEST_NAME: null
     - REPEATED_DTEST_VNODES: false
@@ -2482,10 +2482,10 @@ jobs:
     - CCM_MAX_HEAP_SIZE: 1024M
     - CCM_HEAP_NEWSIZE: 256M
     - REPEATED_UTEST_TARGET: testsome
-    - REPEATED_UTEST_CLASS: null
+    - REPEATED_UTEST_CLASS: org.apache.cassandra.db.commitlog.GroupCommitLogTest
     - REPEATED_UTEST_METHODS: null
     - REPEATED_UTEST_VNODES: false
-    - REPEATED_UTEST_COUNT: 100
+    - REPEATED_UTEST_COUNT: 1000
     - REPEATED_UTEST_STOP_ON_FAILURE: false
     - REPEATED_DTEST_NAME: null
     - REPEATED_DTEST_VNODES: false
@@ -2560,10 +2560,10 @@ jobs:
     - CCM_MAX_HEAP_SIZE: 1024M
     - CCM_HEAP_NEWSIZE: 256M
     - REPEATED_UTEST_TARGET: testsome
-    - REPEATED_UTEST_CLASS: null
+    - REPEATED_UTEST_CLASS: org.apache.cassandra.db.commitlog.GroupCommitLogTest
     - REPEATED_UTEST_METHODS: null
     - REPEATED_UTEST_VNODES: false
-    - REPEATED_UTEST_COUNT: 100
+    - REPEATED_UTEST_COUNT: 1000
     - REPEATED_UTEST_STOP_ON_FAILURE: false
     - REPEATED_DTEST_NAME: null
     - REPEATED_DTEST_VNODES: false
@@ -2656,10 +2656,10 @@ jobs:
     - CCM_MAX_HEAP_SIZE: 1024M
     - CCM_HEAP_NEWSIZE: 256M
     - REPEATED_UTEST_TARGET: testsome
-    - REPEATED_UTEST_CLASS: null
+    - REPEATED_UTEST_CLASS: org.apache.cassandra.db.commitlog.GroupCommitLogTest
     - REPEATED_UTEST_METHODS: null
     - REPEATED_UTEST_VNODES: false
-    - REPEATED_UTEST_COUNT: 100
+    - REPEATED_UTEST_COUNT: 1000
     - REPEATED_UTEST_STOP_ON_FAILURE: false
     - REPEATED_DTEST_NAME: null
     - REPEATED_DTEST_VNODES: false
@@ -2767,10 +2767,10 @@ jobs:
     - CCM_MAX_HEAP_SIZE: 1024M
     - CCM_HEAP_NEWSIZE: 256M
     - REPEATED_UTEST_TARGET: testsome
-    - REPEATED_UTEST_CLASS: null
+    - REPEATED_UTEST_CLASS: org.apache.cassandra.db.commitlog.GroupCommitLogTest
     - REPEATED_UTEST_METHODS: null
     - REPEATED_UTEST_VNODES: false
-    - REPEATED_UTEST_COUNT: 100
+    - REPEATED_UTEST_COUNT: 1000
     - REPEATED_UTEST_STOP_ON_FAILURE: false
     - REPEATED_DTEST_NAME: null
     - REPEATED_DTEST_VNODES: false
@@ -2866,10 +2866,10 @@ jobs:
     - CCM_MAX_HEAP_SIZE: 1024M
     - CCM_HEAP_NEWSIZE: 256M
     - REPEATED_UTEST_TARGET: testsome
-    - REPEATED_UTEST_CLASS: null
+    - REPEATED_UTEST_CLASS: org.apache.cassandra.db.commitlog.GroupCommitLogTest
     - REPEATED_UTEST_METHODS: null
     - REPEATED_UTEST_VNODES: false
-    - REPEATED_UTEST_COUNT: 100
+    - REPEATED_UTEST_COUNT: 1000
     - REPEATED_UTEST_STOP_ON_FAILURE: false
     - REPEATED_DTEST_NAME: null
     - REPEATED_DTEST_VNODES: false
@@ -2962,10 +2962,10 @@ jobs:
     - CCM_MAX_HEAP_SIZE: 1024M
     - CCM_HEAP_NEWSIZE: 256M
     - REPEATED_UTEST_TARGET: testsome
-    - REPEATED_UTEST_CLASS: null
+    - REPEATED_UTEST_CLASS: org.apache.cassandra.db.commitlog.GroupCommitLogTest
     - REPEATED_UTEST_METHODS: null
     - REPEATED_UTEST_VNODES: false
-    - REPEATED_UTEST_COUNT: 100
+    - REPEATED_UTEST_COUNT: 1000
     - REPEATED_UTEST_STOP_ON_FAILURE: false
     - REPEATED_DTEST_NAME: null
     - REPEATED_DTEST_VNODES: false
@@ -3058,10 +3058,10 @@ jobs:
     - CCM_MAX_HEAP_SIZE: 1024M
     - CCM_HEAP_NEWSIZE: 256M
     - REPEATED_UTEST_TARGET: testsome
-    - REPEATED_UTEST_CLASS: null
+    - REPEATED_UTEST_CLASS: org.apache.cassandra.db.commitlog.GroupCommitLogTest
     - REPEATED_UTEST_METHODS: null
     - REPEATED_UTEST_VNODES: false
-    - REPEATED_UTEST_COUNT: 100
+    - REPEATED_UTEST_COUNT: 1000
     - REPEATED_UTEST_STOP_ON_FAILURE: false
     - REPEATED_DTEST_NAME: null
     - REPEATED_DTEST_VNODES: false
@@ -3122,10 +3122,10 @@ jobs:
     - CCM_MAX_HEAP_SIZE: 1024M
     - CCM_HEAP_NEWSIZE: 256M
     - REPEATED_UTEST_TARGET: testsome
-    - REPEATED_UTEST_CLASS: null
+    - REPEATED_UTEST_CLASS: org.apache.cassandra.db.commitlog.GroupCommitLogTest
     - REPEATED_UTEST_METHODS: null
     - REPEATED_UTEST_VNODES: false
-    - REPEATED_UTEST_COUNT: 100
+    - REPEATED_UTEST_COUNT: 1000
     - REPEATED_UTEST_STOP_ON_FAILURE: false
     - REPEATED_DTEST_NAME: null
     - REPEATED_DTEST_VNODES: false
@@ -3232,10 +3232,10 @@ jobs:
     - CCM_MAX_HEAP_SIZE: 1024M
     - CCM_HEAP_NEWSIZE: 256M
     - REPEATED_UTEST_TARGET: testsome
-    - REPEATED_UTEST_CLASS: null
+    - REPEATED_UTEST_CLASS: org.apache.cassandra.db.commitlog.GroupCommitLogTest
     - REPEATED_UTEST_METHODS: null
     - REPEATED_UTEST_VNODES: false
-    - REPEATED_UTEST_COUNT: 100
+    - REPEATED_UTEST_COUNT: 1000
     - REPEATED_UTEST_STOP_ON_FAILURE: false
     - REPEATED_DTEST_NAME: null
     - REPEATED_DTEST_VNODES: false
@@ -3287,10 +3287,10 @@ jobs:
     - CCM_MAX_HEAP_SIZE: 1024M
     - CCM_HEAP_NEWSIZE: 256M
     - REPEATED_UTEST_TARGET: testsome
-    - REPEATED_UTEST_CLASS: null
+    - REPEATED_UTEST_CLASS: org.apache.cassandra.db.commitlog.GroupCommitLogTest
     - REPEATED_UTEST_METHODS: null
     - REPEATED_UTEST_VNODES: false
-    - REPEATED_UTEST_COUNT: 100
+    - REPEATED_UTEST_COUNT: 1000
     - REPEATED_UTEST_STOP_ON_FAILURE: false
     - REPEATED_DTEST_NAME: null
     - REPEATED_DTEST_VNODES: false
@@ -3351,10 +3351,10 @@ jobs:
     - CCM_MAX_HEAP_SIZE: 1024M
     - CCM_HEAP_NEWSIZE: 256M
     - REPEATED_UTEST_TARGET: testsome
-    - REPEATED_UTEST_CLASS: null
+    - REPEATED_UTEST_CLASS: org.apache.cassandra.db.commitlog.GroupCommitLogTest
     - REPEATED_UTEST_METHODS: null
     - REPEATED_UTEST_VNODES: false
-    - REPEATED_UTEST_COUNT: 100
+    - REPEATED_UTEST_COUNT: 1000
     - REPEATED_UTEST_STOP_ON_FAILURE: false
     - REPEATED_DTEST_NAME: null
     - REPEATED_DTEST_VNODES: false
@@ -3450,10 +3450,10 @@ jobs:
     - CCM_MAX_HEAP_SIZE: 1024M
     - CCM_HEAP_NEWSIZE: 256M
     - REPEATED_UTEST_TARGET: testsome
-    - REPEATED_UTEST_CLASS: null
+    - REPEATED_UTEST_CLASS: org.apache.cassandra.db.commitlog.GroupCommitLogTest
     - REPEATED_UTEST_METHODS: null
     - REPEATED_UTEST_VNODES: false
-    - REPEATED_UTEST_COUNT: 100
+    - REPEATED_UTEST_COUNT: 1000
     - REPEATED_UTEST_STOP_ON_FAILURE: false
     - REPEATED_DTEST_NAME: null
     - REPEATED_DTEST_VNODES: false
@@ -3561,10 +3561,10 @@ jobs:
     - CCM_MAX_HEAP_SIZE: 1024M
     - CCM_HEAP_NEWSIZE: 256M
     - REPEATED_UTEST_TARGET: testsome
-    - REPEATED_UTEST_CLASS: null
+    - REPEATED_UTEST_CLASS: org.apache.cassandra.db.commitlog.GroupCommitLogTest
     - REPEATED_UTEST_METHODS: null
     - REPEATED_UTEST_VNODES: false
-    - REPEATED_UTEST_COUNT: 100
+    - REPEATED_UTEST_COUNT: 1000
     - REPEATED_UTEST_STOP_ON_FAILURE: false
     - REPEATED_DTEST_NAME: null
     - REPEATED_DTEST_VNODES: false
@@ -3743,10 +3743,10 @@ jobs:
     - CCM_MAX_HEAP_SIZE: 1024M
     - CCM_HEAP_NEWSIZE: 256M
     - REPEATED_UTEST_TARGET: testsome
-    - REPEATED_UTEST_CLASS: null
+    - REPEATED_UTEST_CLASS: org.apache.cassandra.db.commitlog.GroupCommitLogTest
     - REPEATED_UTEST_METHODS: null
     - REPEATED_UTEST_VNODES: false
-    - REPEATED_UTEST_COUNT: 100
+    - REPEATED_UTEST_COUNT: 1000
     - REPEATED_UTEST_STOP_ON_FAILURE: false
     - REPEATED_DTEST_NAME: null
     - REPEATED_DTEST_VNODES: false
@@ -3839,10 +3839,10 @@ jobs:
     - CCM_MAX_HEAP_SIZE: 1024M
     - CCM_HEAP_NEWSIZE: 256M
     - REPEATED_UTEST_TARGET: testsome
-    - REPEATED_UTEST_CLASS: null
+    - REPEATED_UTEST_CLASS: org.apache.cassandra.db.commitlog.GroupCommitLogTest
     - REPEATED_UTEST_METHODS: null
     - REPEATED_UTEST_VNODES: false
-    - REPEATED_UTEST_COUNT: 100
+    - REPEATED_UTEST_COUNT: 1000
     - REPEATED_UTEST_STOP_ON_FAILURE: false
     - REPEATED_DTEST_NAME: null
     - REPEATED_DTEST_VNODES: false
