--- a/conf/cassandra.yaml
+++ b/conf/cassandra.yaml
@@ -1724,6 +1724,9 @@ drop_compact_storage_enabled: false
 # Guardrail to allow/disallow TRUNCATE and DROP TABLE statements
 # drop_truncate_table_enabled: true
 #
+# Guardrail to allow/disallow DROP KEYSPACE statements
+# drop_keyspace_enabled: true
+#
 # Guardrail to warn or fail when using a page size greater than threshold.
 # The two thresholds default to -1 to disable.
 # page_size_warn_threshold: -1
