--- a/test/conf/cassandra-converters-special-cases-old-names.yaml
+++ b/test/conf/cassandra-converters-special-cases-old-names.yaml
@@ -1,3 +1,7 @@
+#
+# This test config is used to test the Converters added for configuration backward compatibility in 4.1 post
+# CASSANDRA-15234. It tests setting old Config names (CASSANDRA-17737)
+#
 sstable_preemptive_open_interval_in_mb: -1
 index_summary_resize_interval_in_minutes: -1
 
