Add tests for MILLIS_CUSTOM_DURATION and MILLIS_DURATION_DOUBLE patch by Ekaterina Dimitrova; reviewed by Andres de la Pena for CASSANDRA-17737

--- a/test/conf/cassandra-converters-special-cases-old-names.yaml
+++ b/test/conf/cassandra-converters-special-cases-old-names.yaml
@@ -5,4 +5,6 @@
 sstable_preemptive_open_interval_in_mb: -1
 index_summary_resize_interval_in_minutes: -1
 cache_load_timeout_seconds: -1
+commitlog_sync_group_window_in_ms: NaN
+credentials_update_interval_in_ms: -1
 
